# tg_constructor

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  build_go_images.sh  compile_grpc_go.sh  compile_proto_go.sh  docker-compose.yaml  go.work  go.work.sum
modules/back/schemamanager/: build.gradle.kts
modules/bot/: Dockerfile  build_image.sh  go.mod  go.sum  main.go  push_image.sh
modules/config_service/: Dockerfile  build_image.sh  go.mod  go.sum  main.go  push_image.sh
modules/config_service/pkg/db/: db.go
modules/config_service/pkg/domain/: domain.go
modules/config_service/pkg/server/: server.go  server_test.go  test_init_script.sql
modules/golang_commons/: commons_flags.go  commons_logging.go  go.mod  go.sum
modules/haproxy_api_client/: Cargo.toml
modules/haproxy_api_client/src/: lib.rs
modules/haproxy_integrator/: Cargo.toml
modules/haproxy_integrator/src/: main.rs
modules/protocol/: grpc_config_server.proto  protocol.proto
modules/pulling_telegram_proxy/: Dockerfile  build_image.sh  go.mod  go.sum  main.go  push_image.sh
modules/pulling_telegram_proxy/pkg/config/: config.go
modules/pulling_telegram_proxy/pkg/db/: inmem.go  inmem_test.go  pg.go
modules/pulling_telegram_proxy/pkg/domain/: domain.go
modules/schemamanager/: build.gradle.kts  push_image.sh
modules/ui/back/: index.js  package-lock.json  package.json
modules/ui/constructor/: .prettierrc  package-lock.json  package.json
modules/ui/constructor/public/: index.html
modules/ui/front/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+53 files in other folders)
